--- a/webscrapper/play with scrapy.ipynb
+++ b/webscrapper/play with scrapy.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "list_tickers = df.ticker.values\n",
-    "list_tickers[0:15]"
+    "list_tickers[0:20]"
    ]
   },
   {
@@ -35,8 +35,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for ticker in list_tickers[15:30]:\n",
+    "for ticker in list_tickers[16:20]:\n",
     "    !scrapy crawl transcripts -a symbol=$ticker"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# one shot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "!scrapy crawl transcripts -a symbol=NFLX"
    ]
   },
   {
@@ -58,36 +76,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['AAPL', 'AMZN', 'MSFT', 'FB', 'GOOG', 'JPM', 'GOOGL', 'XOM', 'JNJ',\n",
-       "       'BAC', 'WFC', 'WMT', 'BRK/B', 'V', 'UNH', 'INTC', 'CVX', 'T', 'HD',\n",
-       "       'PFE', 'VZ', 'MA', 'BA', 'PG', 'CSCO', 'ORCL', 'KO', 'NFLX', 'C',\n",
-       "       'MRK', 'DIS', 'PEP', 'CMCSA', 'DWDP', 'ABBV', 'NVDA', 'IBM',\n",
-       "       'AMGN', 'PM', 'ADBE', 'MCD', 'GE', 'MMM', 'MDT', 'TXN', 'MO',\n",
-       "       'ABT', 'HON', 'CRM', 'UNP', 'ACN', 'PYPL', 'UTX', 'GILD', 'NKE',\n",
-       "       'BKNG', 'LLY', 'COST', 'SLB', 'BMY', 'LMT', 'AVGO', 'QCOM', 'AXP',\n",
-       "       'GS', 'MS', 'TMO', 'COP', 'CAT', 'USB', 'LOW', 'BLK', 'NEE', 'KHC',\n",
-       "       'UPS', 'BIIB', 'EOG', 'CHTR', 'SBUX', 'CVS', 'DHR', 'SCHW', 'BDX',\n",
-       "       'MU', 'SYK', 'PNC', 'WBA', 'OXY', 'ANTM', 'AMT', 'MDLZ', 'AET',\n",
-       "       'FDX', 'CELG', 'ATVI', 'CB', 'ADP', 'AGN', 'TJX', 'ISRG', 'RTN',\n",
-       "       'CL', 'GD', 'CME', 'CSX', 'DUK', 'NOC', 'GM', 'INTU', 'BK', 'SPG',\n",
-       "       'SPGI', 'PSX', 'FOXA', 'ITW', 'AIG', 'SO', 'PX', 'CTSH', 'AMAT'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "idx_from = 170\n",
+    "idx_to = 180"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "list_tickers = df.symbol.values\n",
-    "list_tickers[0:120]"
+    "list_tickers[idx_from:idx_to]"
    ]
   },
   {
@@ -98,7 +102,7 @@
    },
    "outputs": [],
    "source": [
-    "for ticker in list_tickers[100:120]:\n",
+    "for ticker in list_tickers[idx_from:idx_to]:\n",
     "    !scrapy crawl transcripts -a symbol=$ticker"
    ]
   },
