--- a/webscrapper/play with scrapy.ipynb
+++ b/webscrapper/play with scrapy.ipynb
@@ -54,7 +54,36 @@
    },
    "outputs": [],
    "source": [
-    "!scrapy crawl transcripts -a symbol=NFLX"
+    "!scrapy crawl transcripts -a symbol=YHOO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# custom list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ticker_customlist = ['TXT']\n",
+    "len(ticker_customlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "for ticker in ticker_customlist:\n",
+    "    !scrapy crawl transcripts -a symbol=$ticker"
    ]
   },
   {
@@ -70,8 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"spx.csv\")\n",
-    "df.head()"
+    "import pandas as pd"
    ]
   },
   {
@@ -80,15 +108,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx_from = 170\n",
-    "idx_to = 180"
+    "df = pd.read_csv(\"spx.csv\")\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "idx_from = 275\n",
+    "idx_to = 285"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['BXP', 'MSI', 'RF', 'ABC', 'DTE', 'LH', 'CFG', 'SBAC', 'TDG',\n",
+       "       'MYL'], dtype=object)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list_tickers = df.symbol.values\n",
     "list_tickers[idx_from:idx_to]"
