patch duplicates in transcripts

--- a/webscrapper/play with mkdata.ipynb
+++ b/webscrapper/play with mkdata.ipynb
@@ -39,39 +39,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "from pathlib import Path\n",
-    "\n",
-    "from os import listdir\n",
-    "from os.path import isfile, join\n",
-    "transcripts_files = [f for f in listdir(transcripts_folder) if isfile(join(transcripts_folder, f)) and f.split(\".\")[-1] == 'json']\n",
-    "\n",
-    "from os import listdir\n",
-    "from os.path import isfile, join\n",
-    "mkdata_files = [f for f in listdir(mkdata_folder) if isfile(join(mkdata_folder, f)) and f.split(\".\")[-1] == 'json']\n",
-    "\n",
-    "\n",
-    "for transcripts_file in [item for item in transcripts_files if item not in mkdata_files]:\n",
-    "    file = Path(f'{transcripts_folder}{transcripts_file}')\n",
-    "    if file.stat().st_size >0:\n",
-    "        tmp_symbol = transcripts_file.split(\".\")[0]\n",
-    "        \n",
-    "        df = alphavantage_timeSeriesDailyAdjusted(tmp_symbol)\n",
-    "        df.to_json(f'{mkdata_folder}{transcripts_file}', orient='records')\n",
-    "        \n",
-    "        time.sleep(30)\n",
-    "        #break\n",
-    "        print(tmp_symbol)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,14 +53,19 @@
     "    max_retry = 5\n",
     "    k = 0\n",
     "    while 'Meta' not in res.text:\n",
+    "        print(symbol + \": \")\n",
     "        print(res.content)\n",
+    "        \n",
+    "        if 'Invalid API call' in res.text:\n",
+    "            return pd.DataFrame([{}])\n",
+    "        \n",
     "        time.sleep(60)\n",
     "        res = requests.get(f'https://www.alphavantage.co/query?function=TIME_SERIES_DAILY_ADJUSTED&symbol={symbol}&outputsize=full&apikey={os.getenv(\"ALPHAVANTAGE_API\")}')\n",
     "        \n",
     "        k += 1\n",
     "        \n",
     "        if k >= max_retry:\n",
-    "            print('unable to use API')\n",
+    "            print(f'{symbol}: unable to use API')\n",
     "            break\n",
     "        \n",
     "    \n",
@@ -173,6 +145,39 @@
     "    return df\n",
     "    \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "from pathlib import Path\n",
+    "\n",
+    "from os import listdir\n",
+    "from os.path import isfile, join\n",
+    "transcripts_files = [f for f in listdir(transcripts_folder) if isfile(join(transcripts_folder, f)) and f.split(\".\")[-1] == 'json']\n",
+    "\n",
+    "from os import listdir\n",
+    "from os.path import isfile, join\n",
+    "mkdata_files = [f for f in listdir(mkdata_folder) if isfile(join(mkdata_folder, f)) and f.split(\".\")[-1] == 'json']\n",
+    "\n",
+    "\n",
+    "for transcripts_file in [item for item in transcripts_files if item not in mkdata_files]:\n",
+    "    file = Path(f'{transcripts_folder}{transcripts_file}')\n",
+    "    if file.stat().st_size >0:\n",
+    "        tmp_symbol = transcripts_file.split(\".\")[0]\n",
+    "        \n",
+    "        df = alphavantage_timeSeriesDailyAdjusted(tmp_symbol)\n",
+    "        df.to_json(f'{mkdata_folder}{transcripts_file}', orient='records')\n",
+    "        \n",
+    "        time.sleep(30)\n",
+    "        #break\n",
+    "        print(tmp_symbol)"
    ]
   },
   {
