--- a/webscrapper/play with scrapy.ipynb
+++ b/webscrapper/play with scrapy.ipynb
@@ -11,32 +11,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"acdr_0614_0714.csv\")\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list_tickers = df.ticker.values\n",
-    "list_tickers[0:20]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for ticker in list_tickers[16:20]:\n",
-    "    !scrapy crawl transcripts -a symbol=$ticker"
+    "import requests\n",
+    "import random\n",
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
+    "\n",
+    "USER_AGENT_CHOICES = [\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/59.0.3071.115 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.90 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/59.0.3071.115 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_6) AppleWebKit/603.3.8 (KHTML, like Gecko) Version/10.1.2 Safari/603.3.8',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; WOW64; rv:54.0) Gecko/20100101 Firefox/54.0',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.101 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.90 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_5) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/59.0.3071.115 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/59.0.3071.115 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.90 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 6.1; WOW64; rv:54.0) Gecko/20100101 Firefox/54.0',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/59.0.3071.115 Safari/537.36',\n",
+    "    'Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:54.0) Gecko/20100101 Firefox/54.0',\n",
+    "    'Mozilla/5.0 (Windows NT 6.1; WOW64; Trident/7.0; rv:11.0) like Gecko',\n",
+    "    'Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.101 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_5) AppleWebKit/603.2.4 (KHTML, like Gecko) Version/10.1.1 Safari/603.2.4',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10.12; rv:54.0) Gecko/20100101 Firefox/54.0',\n",
+    "    'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/59.0.3071.115 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/59.0.3071.115 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.101 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/52.0.2743.116 Safari/537.36 Edge/15.15063',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.78 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/59.0.3071.115 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:54.0) Gecko/20100101 Firefox/54.0',\n",
+    "    'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.90 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.90 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_5) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.90 Safari/537.36',\n",
+    "    'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.78 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/56.0.2924.87 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.90 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_6) AppleWebKit/603.3.8 (KHTML, like Gecko) Version/10.1.2 Safari/603.3.8',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/51.0.2704.79 Safari/537.36 Edge/14.14393',\n",
+    "    'Mozilla/5.0 (X11; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0',\n",
+    "    'Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.90 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 6.3; WOW64; rv:54.0) Gecko/20100101 Firefox/54.0',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; WOW64; Trident/7.0; rv:11.0) like Gecko',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:55.0) Gecko/20100101 Firefox/55.0',\n",
+    "    'Mozilla/5.0 (X11; Linux x86_64; rv:54.0) Gecko/20100101 Firefox/54.0',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.78 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 6.1; rv:54.0) Gecko/20100101 Firefox/54.0',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; WOW64; rv:55.0) Gecko/20100101 Firefox/55.0',\n",
+    "    'Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.78 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_5) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/59.0.3071.115 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:54.0) Gecko/20100101 Firefox/54.0',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/59.0.3071.115 Safari/537.36 OPR/46.0.2597.57',\n",
+    "    'Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:54.0) Gecko/20100101 Firefox/54.0',\n",
+    "    'Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:55.0) Gecko/20100101 Firefox/55.0',\n",
+    "    'Mozilla/5.0 (Windows NT 6.1; Trident/7.0; rv:11.0) like Gecko',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/59.0.3071.115 Safari/537.36',\n",
+    "    'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Ubuntu Chromium/59.0.3071.109 Chrome/59.0.3071.109 Safari/537.36',\n",
+    "    'Mozilla/5.0 (iPad; CPU OS 10_3_3 like Mac OS X) AppleWebKit/603.3.8 (KHTML, like Gecko) Version/10.0 Mobile/14G60 Safari/602.1',\n",
+    "    'Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.101 Safari/537.36',\n",
+    "    'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.101 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 6.1; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0',\n",
+    "    'Mozilla/5.0 (Windows NT 6.1; WOW64; rv:55.0) Gecko/20100101 Firefox/55.0',\n",
+    "    'Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.101 Safari/537.36',\n",
+    "    'Mozilla/5.0 (X11; Linux x86_64; rv:55.0) Gecko/20100101 Firefox/55.0',\n",
+    "    'Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/59.0.3071.115 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10.12; rv:55.0) Gecko/20100101 Firefox/55.0',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_3) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/59.0.3071.115 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_5) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.90 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.101 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 5.1; rv:52.0) Gecko/20100101 Firefox/52.0',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_4) AppleWebKit/603.1.30 (KHTML, like Gecko) Version/10.1 Safari/603.1.30',\n",
+    "    'Mozilla/5.0 (Windows NT 6.3; WOW64; Trident/7.0; rv:11.0) like Gecko',\n",
+    "    'Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.90 Safari/537.36',\n",
+    "    'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.36',\n",
+    "    'Mozilla/5.0 (iPad; CPU OS 10_3_2 like Mac OS X) AppleWebKit/603.2.4 (KHTML, like Gecko) Version/10.0 Mobile/14F89 Safari/602.1',\n",
+    "    'Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:55.0) Gecko/20100101 Firefox/55.0',\n",
+    "    'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Ubuntu Chromium/60.0.3112.78 Chrome/60.0.3112.78 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_5) AppleWebKit/603.3.8 (KHTML, like Gecko) Version/10.1.2 Safari/603.3.8',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.90 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/59.0.3071.115 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.90 Safari/537.36',\n",
+    "    'Mozilla/5.0 (X11; Fedora; Linux x86_64; rv:54.0) Gecko/20100101 Firefox/54.0',\n",
+    "    'Mozilla/5.0 (X11; Linux x86_64; rv:45.0) Gecko/20100101 Firefox/45.0',\n",
+    "    'Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.1; Trident/5.0;  Trident/5.0',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10.10; rv:54.0) Gecko/20100101 Firefox/54.0',\n",
+    "    'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/56.0.2924.87 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/59.0.3071.115 Safari/537.36',\n",
+    "    'Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.0; Trident/5.0;  Trident/5.0)',\n",
+    "    'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_3) AppleWebKit/600.5.17 (KHTML, like Gecko) Version/8.0.5 Safari/600.5.17',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.101 Safari/537.36',\n",
+    "    'Mozilla/5.0 (Windows NT 10.0; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0',\n",
+    "    'Mozilla/5.0 (Windows NT 6.1; WOW64; rv:37.0) Gecko/20100101 Firefox/37.0'\n",
+    "]\n",
+    "\n",
+    "def refresh_proxies():\n",
+    "    \n",
+    "    headers = requests.utils.default_headers()\n",
+    "    headers.update(\n",
+    "        {\n",
+    "            'User-Agent': USER_AGENT_CHOICES[random.randint(0, len(USER_AGENT_CHOICES))],\n",
+    "        }\n",
+    "    )\n",
+    "    \n",
+    "    res = requests.get('https://free-proxy-list.net/', headers=headers)\n",
+    "    \n",
+    "    soup = BeautifulSoup(res.content, 'html.parser')\n",
+    "    \n",
+    "    hTable = soup.find(id=\"proxylisttable\")\n",
+    "    k = 0\n",
+    "    for hTh in hTable.findAll('tr')[0].findAll('th'):\n",
+    "        if hTh.text == 'IP Address':\n",
+    "            dim_ip = k\n",
+    "        elif hTh.text == 'Port':\n",
+    "            dim_port = k\n",
+    "        elif hTh.text == 'Country':\n",
+    "            dim_country = k\n",
+    "        elif hTh.text == 'Https':\n",
+    "            dim_https = k\n",
+    "\n",
+    "        k += 1\n",
+    "    \n",
+    "    proxyies = []\n",
+    "    for hTr in hTable.findAll('tr')[1:]:\n",
+    "        hTds = hTr.findAll('td')\n",
+    "\n",
+    "        if len(hTds)>= max(dim_ip, dim_port, dim_country, dim_https):\n",
+    "            proxyies.append({\n",
+    "                'ip': hTds[dim_ip].text,\n",
+    "                'port': hTds[dim_port].text,\n",
+    "                'country': hTds[dim_country].text,\n",
+    "                'https': hTds[dim_https].text,\n",
+    "                'url': 'https://'  + hTds[dim_ip].text + \":\" + hTds[dim_port].text if hTds[dim_https].text == 'yes' else 'http://' + hTds[dim_ip].text + \":\" + hTds[dim_port].text\n",
+    "            })\n",
+    "\n",
+    "\n",
+    "\n",
+    "    df = pd.DataFrame(proxyies)\n",
+    "    \n",
+    "    df = df[df.https == 'yes']\n",
+    "    \n",
+    "    banned_counties = ['Afghanistan', 'Albania', 'Argentina', 'Armenia', 'Azerbaijan',\n",
+    "                   'Bangladesh', 'Belarus', 'Benin', 'Bolivia', 'Bosnia and Herzegovina', 'Botswana', 'Brazil', 'Bulgaria', \n",
+    "                   'Cambodia', 'Cameroon', 'Chad', 'Chile', 'Colombia', 'Costa Rica', 'Cyprus', 'Czech Republic', \n",
+    "                   'Dominican Republic', \n",
+    "                   'Ecuador', 'Egypt', 'El Salvador',\n",
+    "                   'Georgia', 'Ghana', 'Guinea',\n",
+    "                   'Honduras', 'Hong Kong', 'Hungary', \n",
+    "                   'India', 'Indonesia', 'Iran', 'Iraq', \n",
+    "                   'Jamaica',\n",
+    "                   'Kazakhstan', \n",
+    "                   'Kenya', 'Korea',\n",
+    "                   'Latvia', 'Lebanon', 'Libya', 'Lithuania',\n",
+    "                   'Macedonia', 'Malaysia', 'Malawi', 'Mauritius', 'Mexico', 'Moldova, Republic of', 'Mongolia', 'Mozambique', 'Myanmar',\n",
+    "                   'Nepal', 'Nigeria', \n",
+    "                   'Pakistan', 'Palestinian Territory', 'Panama', 'Paraguay', 'Peru', 'Philippines', 'Puerto Rico',\n",
+    "                   'Reunion', 'Romania', 'Russian Federation',\n",
+    "                   'Saudi Arabia', 'Serbia', 'Sierra Leone', 'Slovakia', 'Singapore', 'Slovenia', 'Somalia', 'South Africa', 'Swaziland', 'Seychelles',\n",
+    "                   'Taiwan', 'Tanzania', 'Thailand', 'Timor-Leste', 'Turkey',\n",
+    "                   'Uganda', 'Ukraine', 'United Arab Emirates',\n",
+    "                   'Venezuela', 'Vietnam',\n",
+    "                   'Yemen',\n",
+    "                   'Zimbabwe'\n",
+    "                  ]\n",
+    "    \n",
+    "    df[~df.country.isin( banned_counties)]['url'].to_csv('proxies.txt', index=False, header=False)\n",
+    "    \n",
+    "    print('refresh_proxies: done, ' + str( len(df[~df.country.isin( banned_counties)]) ) )\n",
+    "    \n",
+    "    return df[~df.country.isin( banned_counties)]"
    ]
   },
   {
@@ -52,9 +199,18 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "refresh_proxies: done, 35\n"
+     ]
+    }
+   ],
    "source": [
-    "!scrapy crawl transcripts -a symbol=YHOO"
+    "refresh_proxies()\n",
+    "!scrapy crawl transcripts -a symbol=GOOG"
    ]
   },
   {
@@ -70,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ticker_customlist = ['TXT']\n",
+    "ticker_customlist = ['BABA', 'YY', 'JD']\n",
     "len(ticker_customlist)"
    ]
   },
@@ -82,8 +238,12 @@
    },
    "outputs": [],
    "source": [
-    "for ticker in ticker_customlist:\n",
-    "    !scrapy crawl transcripts -a symbol=$ticker"
+    "from IPython.display import clear_output\n",
+    "\n",
+    "for ticker in ticker_customlist[:]:\n",
+    "    refresh_proxies()\n",
+    "    !scrapy crawl transcripts -a symbol=$ticker\n",
+    "    clear_output()"
    ]
   },
   {
@@ -114,31 +274,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx_from = 275\n",
-    "idx_to = 285"
+    "idx_from = 450\n",
+    "idx_to = 507"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['BXP', 'MSI', 'RF', 'ABC', 'DTE', 'LH', 'CFG', 'SBAC', 'TDG',\n",
-       "       'MYL'], dtype=object)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list_tickers = df.symbol.values\n",
     "list_tickers[idx_from:idx_to]"
@@ -152,8 +300,13 @@
    },
    "outputs": [],
    "source": [
+    "from IPython.display import clear_output\n",
+    "\n",
     "for ticker in list_tickers[idx_from:idx_to]:\n",
-    "    !scrapy crawl transcripts -a symbol=$ticker"
+    "    if '/' not in ticker:\n",
+    "        refresh_proxies()\n",
+    "        !scrapy crawl transcripts -a symbol=$ticker\n",
+    "        clear_output()"
    ]
   },
   {
@@ -161,7 +314,85 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_now = pd.read_excel('spx_histo.xlsx', sheet_name='now', header=None, names=['ticker'])\n",
+    "df_now.head()\n",
+    "\n",
+    "former_company = []\n",
+    "for i in range(2006, 2018):\n",
+    "    df_tmp = pd.read_excel('spx_histo.xlsx', sheet_name=f'{i}1231', header=None, names=['ticker'])\n",
+    "    tmp_tickers = [item for item in df_tmp.ticker.values if item not in df_now.ticker.values]\n",
+    "    former_company += tmp_tickers\n",
+    "former_company = list(set(former_company))\n",
+    "\n",
+    "import re\n",
+    "noquote_companies = []\n",
+    "from functools import reduce\n",
+    "reduce( lambda s, company: noquote_companies.append(company) if re.search('[\\d]+[A-Z]\\sU', company) != None else noquote_companies, former_company, noquote_companies)\n",
+    "len(noquote_companies)\n",
+    "\n",
+    "former_quotedinspx = [item.split(\" \")[0] for item in former_company if item not in noquote_companies]\n",
+    "len(former_quotedinspx)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ndx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ndx = pd.read_csv('ndx.csv')\n",
+    "df_spx = pd.read_csv('spx.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "only_ndx = [item for item in df_ndx.symbol.values if item not in df_spx.symbol.values]\n",
+    "len(only_ndx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.display import clear_output\n",
+    "\n",
+    "for ticker in only_ndx:\n",
+    "    if '/' not in ticker:\n",
+    "        refresh_proxies()\n",
+    "        !scrapy crawl transcripts -a symbol=$ticker\n",
+    "        clear_output()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import clear_output\n",
+    "\n",
+    "for ticker in former_quotedinspx[::-1]:\n",
+    "    if '/' not in ticker:\n",
+    "        refresh_proxies()\n",
+    "        !scrapy crawl transcripts -a symbol=$ticker\n",
+    "        clear_output()"
+   ]
   }
  ],
  "metadata": {
